[gd_scene load_steps=10 format=2]

[ext_resource path="res://Images/ui/pixel.png" type="Texture" id=1]
[ext_resource path="res://Images/ui/arrow.png" type="Texture" id=2]
[ext_resource path="res://Retrophile Regular.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Images/Characters/b/walk.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Menues/Player_Join_Menu/Skin_Select_Slot.gd" type="Script" id=5]



[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 32
extra_spacing_bottom = 20
font_data = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "walk"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("VBoxContainer/Current_Container/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0, 59 ]
}

[sub_resource type="Animation" id=4]
loop = true
step = 0.25

[node name="Skin_Select_Slot" type="Control"]
anchor_right = 0.224609
anchor_bottom = 0.75
margin_left = -0.000198364
margin_right = 0.000198364
margin_bottom = -100.0
grow_horizontal = 2
rect_min_size = Vector2( 230, 400 )
size_flags_horizontal = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": true
}

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color( 0.352941, 0.427451, 0.490196, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player_Number" type="Label" parent="VBoxContainer"]
margin_right = 230.0
margin_bottom = 33.0
rect_min_size = Vector2( 200, 33 )
custom_fonts/font = SubResource( 1 )
text = "Player 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Up_Container" type="CenterContainer" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 230.0
margin_bottom = 107.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Up" type="TextureRect" parent="VBoxContainer/Up_Container"]
margin_left = 65.0
margin_right = 165.0
margin_bottom = 70.0
rect_min_size = Vector2( 100, 70 )
size_flags_horizontal = 3
texture = ExtResource( 2 )
expand = true
stretch_mode = 6

[node name="Current_Container" type="CenterContainer" parent="VBoxContainer"]
margin_top = 111.0
margin_right = 230.0
margin_bottom = 269.0
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="VBoxContainer/Current_Container"]
scale = Vector2( 0.8, 0.8 )
texture = ExtResource( 4 )
offset = Vector2( 145, 70 )
vframes = 4
hframes = 15
frame = 51

[node name="Down_Container" type="CenterContainer" parent="VBoxContainer"]
margin_top = 273.0
margin_right = 230.0
margin_bottom = 343.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button_Down" type="TextureRect" parent="VBoxContainer/Down_Container"]
margin_left = 65.0
margin_right = 165.0
margin_bottom = 70.0
rect_min_size = Vector2( 100, 70 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 6
flip_v = true

[node name="Press_A" type="Label" parent="VBoxContainer"]
margin_top = 347.0
margin_right = 230.0
margin_bottom = 400.0
rect_min_size = Vector2( 200, 33 )
custom_fonts/font = SubResource( 2 )
text = "Press a"
align = 1
valign = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 1.5
anims/walk = SubResource( 3 )
anims/wiggle = SubResource( 4 )
